internal/octogo/testdata/01_package_keyword.ogo
// ERROR "package" \[identifier\]: expected
package main

import "p2"

func main() {
	p2.PinHigh(1)
}
